created navbar and login components

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,11 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-  <a class="navbar-brand" routerLink="/home">{{welcome}}</a>
-  <ul class="nav navbar-nav float-xs-right">
-    <li class="nav-item active">
-      <button class="btn btn-secondary">Login</button>
-    </li>
-  </ul>
-</nav>
+<navbar></navbar>
 <div class="main">
   <router-outlet></router-outlet>
 </div>
