added login spinner

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,14 +1,18 @@
 <button class="btn btn-secondary" (click)="modal.open()">Login</button>
 
-<modal cssClass="test" #modal>
+<modal #loginModal>
     <modal-header [show-close]="true" >
         <h4 class="modal-title">Login</h4>
     </modal-header>
+    <form (ngSubmit)="login()" #loginForm="ngForm">
     <modal-body>
-        Hello World!
+      <md-input placeholder="username" [(ngModel)]="creds.username" name="username" required></md-input>
+      <md-input placeholder="password" type="password" [(ngModel)]="creds.password" name="password" required></md-input>
+      <i *ngIf="loginLoading" class="fa fa-spinner fa-spin fa-3x modal-spinner" aria-hidden="true"></i>
     </modal-body>
     <modal-footer>
       <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modal.dismiss()">Cancel</button>
-      <button type="button" class="btn btn-secondary" (click)="modal.close()">Ok</button>
+      <button type="submit" class="btn btn-secondary" [disabled]="!loginForm.form.valid || loginLoading">Login</button>
     </modal-footer>
+    </form>
 </modal>
