tweaks to user service

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,4 +1,9 @@
-<button class="btn btn-secondary" (click)="modal.open()">Login</button>
+<button *ngIf="!user.username" class="btn btn-secondary" (click)="modal.open()">Login</button>
+<div *ngIf="user.username">
+  <span  id="user-title">Welcome, {{user.firstName}}</span>
+  <a class="btn btn-secondary" href="#">Manage Account</a>
+</div>
+
 
 <modal #loginModal>
     <modal-header [show-close]="true" >
