--- a/app/login/login.component.css
+++ b/app/login/login.component.css
@@ -2,3 +2,16 @@
   color: white;
   margin-right: 30px;
 }
+
+.in-line {
+  display: inline-block;
+}
+
+.dropdown {
+
+}
+
+.dropdown button {
+  opacity: 0.3;
+}
+
