added loading spinners

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -12,4 +12,10 @@
     </div>
   </div>
 
+  <div *ngIf="homeLoading" class="center-page">
+    <div id="loading-spinner">
+      <i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
+    </div>
+  </div>
+
 </div>
