--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,4 +1,13 @@
-<div id="home">
+<div *ngIf="user" id="home">
+
+  <div class="row">
+    <div class="container">
+      <button *ngIf="!creatingFolder" class="btn btn-secondary" (click)="creatingFolder = true">New Folder</button>
+      <button *ngIf="creatingFolder" class="btn btn-secondary" (click)="createFolder()">Create</button>
+      <md-input *ngIf="creatingFolder" id="new-folder-name" placeholder="Folder Name" [(ngModel)]="newFolder" name="folderName" required></md-input>
+    </div>
+  </div>
+  
 
   <div class="col-sm-4" *ngFor="let folder of folders">
     <div class="card card-block note-card">
