--- a/app/folder/folder-details.component.html
+++ b/app/folder/folder-details.component.html
@@ -8,6 +8,6 @@
     </form>
   </div>
   <p class="card-text">
-    <span *ngFor="let note of folder.notes">{{note.title}} : {{note.details}}<br/></span>
+    <span *ngFor="let note of folder.notes">{{note.title}} : {{note.details}} <a href="#" (click)="deleteNote(note)">X</a><br/></span>
   </p>
 </div>
