--- a/app/folder/folder-details.component.html
+++ b/app/folder/folder-details.component.html
@@ -4,7 +4,7 @@
     <form (ngSubmit)="createNewNote()" #newNoteForm="ngForm">
       <md-input placeholder="Title" [(ngModel)]="newNote.title" name="new-note-title" required></md-input>
       <md-input placeholder="Details" [(ngModel)]="newNote.details" name="new-note-details" required></md-input>
-      <button type="submit" class="btn btn-secondary" [disabled]="!newNoteForm.form.valid">Add</button>
+      <button type="submit" class="btn btn-secondary" [disabled]="!newNoteForm.form.valid"><i class="fa fa-check" aria-hidden="true"></i></button>
     </form>
   </div>
   <div class="card-text">
