--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="col-sm-4">
+  <div class="col-sm-4" *ngIf="!homeLoading">
     <div class="card card-block note-card">
       <form #newFolderForm="ngForm">
         <h4 class="card-title">
