--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -7,8 +7,8 @@
         <span *ngFor="let note of folder.notes">{{note.title}} : {{note.details}}<br/></span>
       </p>
       <div class="note-bottom">
-          <a [routerLink]="'/folder/' + folder.id" routerLinkActive="active" class="card-link">More</a>
-          <a (click)="deleteFolder(folder.id)" href="#" class="card-link">Delete</a>
+          <a [routerLink]="'/folder/' + folder.id" routerLinkActive="active" class="card-link"><i class="fa fa-ellipsis-h fa-2x" aria-hidden="true"></i></a>
+          <a (click)="deleteFolder(folder.id)" href="#" class="card-link pull-right"><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a>
       </div>
     </div>
   </div>
@@ -22,7 +22,7 @@
         </h4>
         <div class="card-text centered">
           <button id="add-folder-button" [disabled]="!newFolderForm.form.valid" (click)="createFolder()">
-            <i *ngIf="newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true"></i>
+            <i *ngIf="newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true" style="color: #7fd19e"></i>
           </button>
         </div>
       </form>
