--- a/app/folder/folder-details.component.html
+++ b/app/folder/folder-details.component.html
@@ -2,8 +2,8 @@
   <h4 class="card-title">{{folder.name}}</h4>
   <div>
     <form (ngSubmit)="createNewNote()" #newNoteForm="ngForm">
-      <md-input placeholder="Title" [(ngModel)]="newNote.title" name="new-note-title" required></md-input>
-      <md-input placeholder="Details" [(ngModel)]="newNote.details" name="new-note-details" required></md-input>
+      <md-input placeholder="Title" [(ngModel)]="newNote.title" name="new-note-title" maxlength="20" required></md-input>
+      <md-input placeholder="Details" [(ngModel)]="newNote.details" name="new-note-details" maxlength="60" required></md-input>
       <button type="submit" class="btn btn-secondary" [disabled]="!newNoteForm.form.valid"><i class="fa fa-check" aria-hidden="true"></i></button>
     </form>
   </div>
@@ -12,8 +12,8 @@
       <a *ngIf="note.id !== editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="deleteNote(note)"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
       <a *ngIf="note.id === editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="editNote()"><i class="fa fa-pencil" aria-hidden="true"></i></a>
       <span *ngIf="note.id !== editedNote.id" (click)="beginEdit(note);">{{note.title}} : {{note.details}}</span>
-      <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.title" name="new-note-title" required></md-input>
-      <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.details" name="new-note-details" required></md-input>
+      <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.title" name="new-note-title" maxlength="20" required></md-input>
+      <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.details" name="new-note-details" maxlength="60" required></md-input>
       <a *ngIf="note.id === editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="stopEdit()"><i class="fa fa-ban" aria-hidden="true"></i></a>
       <br/>
     </div>
