--- a/app/folder/folder-details.component.html
+++ b/app/folder/folder-details.component.html
@@ -1,21 +1,26 @@
-<div *ngIf="folder" class="card card-block note-card">
-  <h4 class="card-title">{{folder.name}}</h4>
-  <div>
-    <form (ngSubmit)="createNewNote()" #newNoteForm="ngForm">
-      <md-input placeholder="Title" [(ngModel)]="newNote.title" name="new-note-title" maxlength="20" required></md-input>
-      <md-input placeholder="Details" [(ngModel)]="newNote.details" name="new-note-details" maxlength="60" required></md-input>
-      <button type="submit" class="btn btn-secondary" [disabled]="!newNoteForm.form.valid"><i class="fa fa-check" aria-hidden="true"></i></button>
-    </form>
-  </div>
-  <div class="card-text">
-    <div *ngFor="let note of folder.notes" class="note-row">
-      <a *ngIf="note.id !== editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="deleteNote(note)"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-      <a *ngIf="note.id === editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="editNote()"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-      <span *ngIf="note.id !== editedNote.id" (click)="beginEdit(note);">{{note.title}} : {{note.details}}</span>
-      <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.title" name="new-note-title" maxlength="20" required></md-input>
-      <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.details" name="new-note-details" maxlength="60" required></md-input>
-      <a *ngIf="note.id === editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="stopEdit()"><i class="fa fa-ban" aria-hidden="true"></i></a>
-      <br/>
+<div class="col-sm-2"></div>
+<div class="col-sm-8">
+  <div *ngIf="folder" class="card card-block note-card">
+    <h4 class="card-title">{{folder.name}}</h4>
+    <div>
+      <form (ngSubmit)="createNewNote()" #newNoteForm="ngForm">
+        <button id="new-note-button" type="submit" class="btn btn-secondary" [disabled]="!newNoteForm.form.valid"><i class="fa fa-check" aria-hidden="true" style="color:#7fd19e"></i></button>
+        <md-input placeholder="Title" [(ngModel)]="newNote.title" name="new-note-title" maxlength="20" required></md-input>
+        <md-input placeholder="Details" [(ngModel)]="newNote.details" name="new-note-details" maxlength="60" required></md-input>
+      </form>
     </div>
+    <div *ngIf="!noteLoading" class="card-text">
+      <div *ngFor="let note of folder.notes" class="note-row">
+        <a *ngIf="note.id !== editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="deleteNote(note)"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+        <a *ngIf="note.id === editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="editNote()"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+        <span *ngIf="note.id !== editedNote.id" (click)="beginEdit(note);">{{note.title}} : {{note.details}}</span>
+        <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.title" name="new-note-title" maxlength="20" required></md-input>
+        <md-input *ngIf="note.id === editedNote.id" [(ngModel)]="editedNote.details" name="new-note-details" maxlength="60" required></md-input>
+        <a *ngIf="note.id === editedNote.id" href="#" class="btn btn-secondary btn-no-border" (click)="stopEdit()"><i class="fa fa-ban" aria-hidden="true"></i></a>
+        <br/>
+      </div>
+    </div>
+    <i *ngIf="noteLoading" class="fa fa-spinner fa-spin fa-3x modal-spinner" aria-hidden="true"></i>
   </div>
 </div>
+<div class="col-sm-2"></div>
