--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,40 +1,46 @@
-<div *ngIf="user" id="home">
+<div class="container">
+  <div *ngIf="user" class="row">
 
-  <div class="col-sm-4" *ngFor="let folder of folders">
-    <div class="card card-block note-card">
-      <h4 class="card-title">{{folder.name}}</h4>
-      <p *ngIf="folder.id !== idOfDeletingFolder" class="card-text">
-        <span *ngFor="let note of folder.notes">{{note.title}} : {{note.details}}<br/></span>
-      </p>
-      <i *ngIf="folderDeleteLoading && folder.id === idOfDeletingFolder" class="fa fa-spinner fa-spin fa-3x modal-spinner" aria-hidden="true"></i>
-      <div *ngIf="folder.id !== idOfDeletingFolder" class="note-bottom">
-          <a [routerLink]="'/folder/' + folder.id" routerLinkActive="active" class="card-link"><i class="fa fa-ellipsis-h fa-2x" aria-hidden="true"></i></a>
-          <a (click)="deleteFolder(folder.id)" href="#" class="card-link pull-right"><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a>
+    <div class="col-4" *ngFor="let folder of folders">
+      <div class="card card-block note-card">
+        <h4 class="card-title">{{folder.name}}</h4>
+        <p *ngIf="folder.id !== idOfDeletingFolder" class="card-text">
+          <span *ngFor="let note of folder.notes">{{note.title}} : {{note.details}}<br/></span>
+        </p>
+        <i *ngIf="folderDeleteLoading && folder.id === idOfDeletingFolder" class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
+        <div *ngIf="folder.id !== idOfDeletingFolder" class="note-bottom">
+            <a [routerLink]="'/folder/' + folder.id" routerLinkActive="active" class="card-link"><i class="fa fa-ellipsis-h fa-2x" aria-hidden="true"></i></a>
+            <a (click)="deleteFolder(folder.id)" href="#" class="card-link pull-right"><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-4" *ngIf="!homeLoading">
+      <div class="card card-block note-card">
+        <form #newFolderForm="ngForm">
+          <h4 class="card-title">
+            <input class="form-control" placeholder="Add a new folder" [(ngModel)]="newFolder.name" name="folderName" required />
+          </h4>
+          <div class="card-text centered">
+            <button *ngIf="!newFolderLoading" id="add-folder-button" [disabled]="!newFolderForm.form.valid" (click)="createFolder()">
+              <i *ngIf="newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true" style="color: #7fd19e"></i>
+            </button>
+            <div *ngIf="newFolderLoading">
+              <i class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="col-sm-4" *ngIf="!homeLoading">
-    <div class="card card-block note-card">
-      <form #newFolderForm="ngForm">
-        <h4 class="card-title">
-          <md-input class="new-folder-element" placeholder="Add a new folder" [(ngModel)]="newFolder.name" name="folderName" required>
-          </md-input>
-        </h4>
-        <div class="card-text centered">
-          <button *ngIf="!newFolderLoading" id="add-folder-button" [disabled]="!newFolderForm.form.valid" (click)="createFolder()">
-            <i *ngIf="newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true" style="color: #7fd19e"></i>
-          </button>
-          <i *ngIf="newFolderLoading" class="fa fa-spinner fa-spin fa-3x modal-spinner" aria-hidden="true"></i>
-        </div>
-      </form>
-    </div>
+<div *ngIf="homeLoading" class="center-page">
+  <div id="loading-spinner">
+    <i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
   </div>
+</div>
 
-  <div *ngIf="homeLoading" class="center-page">
-    <div id="loading-spinner">
-      <i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
-    </div>
-  </div>
-
+<div *ngIf="!user">
+  <login></login>
 </div>
