--- a/app/navbar/navbar.component.html
+++ b/app/navbar/navbar.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-  <a class="navbar-brand" routerLink="/home">{{welcome}}</a>
+  <a class="navbar-brand" href="#" routerLink="/home">{{welcome}}</a>
   <ul class="nav navbar-nav float-xs-right">
     <li class="nav-item active">
-      <login></login>
     </li>
   </ul>
 </nav>
