--- a/app/login/login.component.css
+++ b/app/login/login.component.css
@@ -7,14 +7,15 @@
   display: inline-block;
 }
 
-.dropdown {
-
-}
-
-.dropdown button {
-  opacity: 0.3;
-}
-
 .modal-spinner {
   margin-top: -20px;
+}
+
+.row {
+  margin-top:70px;
+}
+
+.spacer {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
