--- a/app/navbar/navbar.component.html
+++ b/app/navbar/navbar.component.html
@@ -1,21 +1,24 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-inverse">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-toggleable-sm navbar-light bg-inverse">
+  <button *ngIf="user" class="navbar-toggler navbar-toggler-right navbar-inverse" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand inverse-color" href="#" routerLink="/home">{{welcome}}</a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div *ngIf="user" class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto"></ul>
     <ul class="navbar-nav">
-      <li class="nav-item dropdown xs-pull-right">
+      <li class="nav-item">
+        <a class="nav-link" href="#" (click)="logout()"><span class="inverse-color">Logout</span></a>
+      </li>
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="inverse-color"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
         </div>
-      </li>
+      </li> -->
     </ul>
     
-  </div>
+ </div>
 </nav>
