--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -40,7 +40,7 @@
           <div class="card-text centered">
             <button *ngIf="!newFolderLoading" id="add-folder-button" [disabled]="!newFolderForm.form.valid" (click)="createFolder()">
               <i *ngIf="!newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true" style="color: #dbffea"></i>
-              <i *ngIf="newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true" style="color: #3aff8c"></i>
+              <i *ngIf="newFolderForm.form.valid" class="fa fa-check fa-5x" aria-hidden="true" style="color: #1ec98a"></i>
             </button>
             <div *ngIf="newFolderLoading">
               <i class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
