--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -7,7 +7,7 @@
           <h4 class="card-title" (click)="beginEdit(folder)">{{folder.name}}</h4>
         </div>
         <div *ngIf="folder.id === editedFolder.id" class="input-group details-input">
-          <input class="form-control" placeholder="Edited Folder Name" [(ngModel)]="editedFolder.name" name="editedFolderName" [disabled]="folderEditLoading" required />
+          <input class="form-control" placeholder="Edited Folder Name" [(ngModel)]="editedFolder.name" name="editedFolderName" [disabled]="folderEditLoading" maxlength="20" required />
           <span class="input-group-btn">
             <button  class="btn btn-secondary" (click)="editFolderName()"><i class="fa fa-pencil" aria-hidden="true"></i></button>
           </span>
@@ -16,7 +16,7 @@
           </span>
         </div>
         <p *ngIf="folder.id !== idOfDeletingFolder && folder.id !== idOfEditingFolder" class="card-text">
-          <span *ngFor="let note of folder.notes">{{note.title}} : {{note.details}}<br/></span>
+          <span *ngFor="let note of folder.notes">{{note.title}} ...<br/></span>
         </p>
         <div class="card-text centered" *ngIf="folderDeleteLoading && folder.id === idOfDeletingFolder">
           <i class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
@@ -35,7 +35,7 @@
       <div class="card card-block note-card">
         <form #newFolderForm="ngForm">
           <h4 class="card-title">
-            <input class="form-control" placeholder="Add a new folder" [(ngModel)]="newFolder.name" name="folderName" required />
+            <input class="form-control" placeholder="Add a new folder" [(ngModel)]="newFolder.name" name="folderName" maxlength="20" required />
           </h4>
           <div class="card-text centered">
             <button *ngIf="!newFolderLoading" id="add-folder-button" [disabled]="!newFolderForm.form.valid" (click)="createFolder()">
