Reorganized and added modal for new note

--- a/app/views/folder-notes/folder-notes.component.css
+++ b/app/views/folder-notes/folder-notes.component.css
@@ -27,3 +27,12 @@
   margin-top:10px;
   margin-bottom:10px;
 }
+
+.new-note {
+  margin-bottom: 10px;
+}
+
+#new-note-button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
