--- a/app/views/navbar/navbar.component.html
+++ b/app/views/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <button *ngIf="user" class="navbar-toggler navbar-toggler-right navbar-inverse" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand inverse-color" href="#" routerLink="/home"><i class="fa fa-lock" aria-hidden="true"></i> {{welcome}}</a>
+  <a class="navbar-brand inverse-color" href="#" routerLink="/folders"><i class="fa fa-lock" aria-hidden="true"></i> {{welcome}}</a>
 
   <div *ngIf="user" class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto"></ul>
