ability to make folder primary

--- a/app/views/folder-notes/folder-notes.component.css
+++ b/app/views/folder-notes/folder-notes.component.css
@@ -52,3 +52,10 @@
 .btn-outline-primary:hover {
   background-color: #99caff!important;
 }
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 10px;
+  width: 90%;
+}
