--- a/app/views/folder-notes/folder-notes.component.html
+++ b/app/views/folder-notes/folder-notes.component.html
@@ -25,6 +25,9 @@
     <div *ngIf="noteLoading">
       <i class="fa fa-spinner fa-spin fa-3x modal-spinner" aria-hidden="true"></i>
     </div>
+    <div *ngIf="!isPrimary" style="text-align: right">
+      <button class="btn btn-secondary" (click)="makeFolderPrimary()">Make Primary</button>
+    </div>
   </div>
 </div>
 
