note ordering in folders. WIP

--- a/app/views/folder-notes/folder-notes.component.html
+++ b/app/views/folder-notes/folder-notes.component.html
@@ -27,6 +27,7 @@
     </div>
     <div *ngIf="!isPrimary" style="text-align: right">
       <button class="btn btn-secondary" (click)="makeFolderPrimary()">Make Primary</button>
+      <button class="btn btn-secondary" (click)="setNoteOrder()">Set Note Order</button>
     </div>
   </div>
 </div>
